cron syntax taken from env variable